--- a/index.html
+++ b/index.html
@@ -273,49 +273,49 @@
 
       <div class="content-box-empty">
 
-          <div class="container-image">
+        <div class="container-image">
 
-            <h2>KILKA FAKTÓW O NAS</h2>
+          <h2>KILKA FAKTÓW O NAS</h2>
 
-            <div class="under-text">VeriCom w liczbach</div>
+          <div class="under-text">VeriCom w liczbach</div>
 
-            <div class="row container-mrgin">
+          <div class="row container-mrgin">
 
-              <div class="col padding-bottom">
-                <div id="odometer1" class="odometer under-text-small-icon">1</div>
-                <div class="icon-small">
-                  <i class="fas fa-desktop"></i>
-                </div>
-                </spa>
-                <div class="odometer-text"> OBSŁUGIWANYCH STACJI ROBOCZYCH </div>
+            <div class="col padding-bottom">
+              <div id="odometer1" class="odometer under-text-small-icon">1</div>
+              <div class="icon-small">
+                <i class="fas fa-desktop"></i>
               </div>
-
-              <div class="col padding-bottom">
-                <div id="odometer2" class="odometer under-text-small-icon">1</div>
-                <div class="icon-small">
-                  <i class="fas fa-bars"></i>
-                </div>
-                <div class="odometer-text"> SERWERÓW POD OPIEKĄ </div>
-              </div>
-
-              <div class="col padding-bottom">
-                <div id="odometer3" class="odometer under-text-small-icon">1</div>
-                <div class="icon-small">
-                  <i class="fas fa-user"></i>
-                </div>
-                <div class="odometer-text"> OBSŁUGIWANYCH PRZEDSIĘBIORSTW </div>
-              </div>
-
-              <div class="col padding-bottom">
-                <div id="odometer4" class="odometer under-text-small-icon">1</div>
-                <div class="icon-small">
-                  <i class="far fa-calendar-alt"></i>
-                </div>
-                <div class="odometer-text"> LAT DOŚWIADCZENIA NA RYNKU IT </div>
-              </div>
-
+              </spa>
+              <div class="odometer-text"> OBSŁUGIWANYCH STACJI ROBOCZYCH </div>
             </div>
+
+            <div class="col padding-bottom">
+              <div id="odometer2" class="odometer under-text-small-icon">1</div>
+              <div class="icon-small">
+                <i class="fas fa-bars"></i>
+              </div>
+              <div class="odometer-text"> SERWERÓW POD OPIEKĄ </div>
+            </div>
+
+            <div class="col padding-bottom">
+              <div id="odometer3" class="odometer under-text-small-icon">1</div>
+              <div class="icon-small">
+                <i class="fas fa-user"></i>
+              </div>
+              <div class="odometer-text"> OBSŁUGIWANYCH PRZEDSIĘBIORSTW </div>
+            </div>
+
+            <div class="col padding-bottom">
+              <div id="odometer4" class="odometer under-text-small-icon">1</div>
+              <div class="icon-small">
+                <i class="far fa-calendar-alt"></i>
+              </div>
+              <div class="odometer-text"> LAT DOŚWIADCZENIA NA RYNKU IT </div>
+            </div>
+
           </div>
+        </div>
 
       </div>
 
@@ -339,53 +339,71 @@
 
       <div class="content-box-empty">
         <div class="container-transparent">
-        <div class="row container-mrgin">
-          <div class="col ">
-            <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
-              <div class="form-row">
-                <label for="field-name">Name</label>
-                <input type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
-              </div>
-              <div class="form-row">
-                <label for="field-email">Email</label>
-                <input type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
-              </div>
-              <div class="form-row">
-                <label for="field-message">Message</label>
-                <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">...</textarea>
-              </div>
-              <div class="form-row">
-                <label class="checkbox-cnt">
+          <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin" style="padding-top: 3%;">
+            <div class="col-md-12 col-lg-12 col-xs-12">
+
+              <h2>SKONTAKTUJ SIĘ Z NAMI</h2>
+              <div class="under-text" style="  font-size: 1.0rem;">Będzie nam miło porozmawiać z Państwem</div>
+
+            </div>
+          </div>
+          <div class="row container-mrgin">
+            <div class="col col-left">
+              <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
+                <div class="form-row">
+                  <label for="field-name">Imię i nazwisko (wymagane)</label>
+                  <input type="text" name="name" required id="field-name" data-error="Wypełnij to pole" pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
+                </div>
+                <div class="form-row">
+                  <label for="field-email">Adres email (wymagane)</label>
+                  <input type="email" name="email" required id="field-email" data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
+                </div>
+                <div class="form-row">
+                  <label for="field-message">Treść wiadomości</label>
+                  <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message" pattern=".+">...</textarea>
+                </div>
+                <div class="form-row">
+                  <label class="checkbox-cnt">
                       <input type="checkbox" required data-error="Musisz wypełnić pole" name="regulation">
                       <i class="state" aria-hidden="true"></i>
                       <span>Wyrażam zgodę na używanie przez Trust IT Sp. z.o.o., z siedzibą przy ul. Wróblewskiego 18/103, 93-578 Łódź, telekomunikacyjnych urządzeń końcowych, których jestem użytkownikiem, dla celów marketingu bezpośredniego zgodnie z art. 172 ustawy z dnia 16 lipca 2004 r. Prawo telekomunikacyjne (Dz.U. 2004 nr 171 poz. 1800).*</span>
                   </label>
-              </div>
-              <div class="form-row">
-                <button type="submit" class="submit-btn">
+                </div>
+                <div class="form-row">
+                  <button type="submit" class="submit-btn">
                       Wyślij
                   </button>
-              </div>
+                </div>
 
-            </form>
-          </div>
-          <div class="col">
-            <div class="block">
-              <span class="contact1">Zadzwoń</span> <span class="contact2">12 234 56 78</span>
-              <div class="footer1">
-                <p> VERICOM usługi informatyczne </p>
-                <p> Tel: 502 481 334 </p>
-                <p> Parkowa 53 /2</p>
-                <p> 41-303 Dąbrowa Górnicza </p>
-                <p> NIP: 629-207-53-89 </p>
+              </form>
+            </div>
+            <div class="col col-right">
+
+
+              <p>Dane kontaktowe:</P>
+
+              <div class="thumb-small">
+                <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i>
               </div>
+              <p>Adres: Parkowa 53 /2</P>
+                <div class="thumb-small">
+                  <i class="fa fa-phone" style="-webkit-font-smoothing: antialiased;"></i>
+                </div>
+              <p>Telefon: +48 503 757 557</P>
+                <div class="thumb-small">
+                  <i class="fas fa-envelope" style="-webkit-font-smoothing: antialiased;"></i>
+                </div>
+              <p>Email: biuro@vericom.pl</P>
+                <div class="thumb-small">
+                  <i class="fas fa-globe-americas" style="-webkit-font-smoothing: antialiased;"></i>
+                </div>
+              <p>Witryna: http://vericom.pl</P>
+
+
+
             </div>
 
-
-
           </div>
-
-        </div>
         </div>
       </div>
 
@@ -394,16 +412,39 @@
   Sekcja czwarta
 </div> -->
       <footer id="section3">
-        <div class="container-transparent">
-          <div class="row">
+        <div class="container">
+          <div class="row container-mrgin">
             <div class="col">
-              asdasd
+              <h4> DANE FIRMOWE </h4>
+              <p>
+                VERICOM <br> ul. Parkowa 53 /2 <br> 41-303 Dąbrowa Górnicza
+              </p>
+              <p>
+                NIP: 6292075389<br> REGON: 241660764
+              </p>
             </div>
             <div class="col">
-              dsadas
+              <h4> KONTAKT </h4>
+              <p>
+                +48 502 481 334</br>
+                +48 503 757 557
+              </p>
+              <p>
+                biuro@vericom.pl
+              </p>
             </div>
             <div class="col">
-              ssdada
+              <h4> KONTAKT </h4>
+              <p>
+                <img width="90" height="90" src="img/fb.png" alt="" style="max-width: 100%; height: auto;">
+              </p>
+              <p>
+                facebook.com/vericom
+              </p>
+            </div>
+            <div class="col">
+              <h4 style="margin-bottom:0px;"> RZETELNA FIRMA </h4>
+              <img width="250" height="90" src="img/rzetelnafirma.png" alt="" style="max-width: 100%; height: auto;">
             </div>
           </div>
         </div>
