--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
+            <div class="logobox">
+              <div class="logo" id="logo">
+              </div>
+            </div>
+
             <div class="menu-normal" id="top-menu">
               <ul class="">
                 <li><a href="index.html">Home</a></li>
@@ -75,12 +80,9 @@
                 <li><a href="/">Kontakt</a></li>
               </ul>
             </div>
-            <div class="logobox">
-              <div class="logo" id="logo">
               </div>
-            </div>
             <div id="navigation" class="menu menu-link">
-              <div>
+
                 <ul class="topnav" id="myTopnav">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">O Nas</a></li>
@@ -89,15 +91,14 @@
                   <li><a href="/">Pomoc zdalna</a></li>
                   <li><a href="/">Kontakt</a></li>
                 </ul>
-              </div>
+        
             </div>
-          </div>
         </div>
       </header>
 
       <div class="content-box-white" id="section1">
         <div class="container">
-          <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin">
+          <div class="row row-50 justify-content-center justify-content-lg-between container-margin">
             <div class="col-md-6 col-lg-6 col-xs-6 animated zoomIn" id="about">
               <h3>  O NAS </h3>
               <p> <img src="img/Logo.png" alt="OutSourcing IT" height="80" width="150" style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym wsparciu informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe podejście
@@ -147,7 +148,7 @@
       </div>
       <div class="content-box-grey">
         <div class="container">
-          <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin">
+          <div class="row row-50 justify-content-center justify-content-lg-between container-margin">
             <div class="col-md-12 col-lg-12 col-xs-12">
               <div class="hidden-to-animate">
                 <h2>
@@ -275,7 +276,7 @@
         <div class="container-image">
           <h2 class="hidden-to-animate">KILKA FAKTÓW O NAS</h2>
           <div class="under-text">VeriCom w liczbach</div>
-          <div class="row container-mrgin">
+          <div class="row container-margin">
             <div class="col animation-facts hidden-to-animate-top">
               <div id="odometer1" class="odometer under-text-small-icon">1</div>
               <div class="icon-small">
@@ -329,13 +330,13 @@
       </div>
       <div class="content-box-parallax" id="contact">
         <div class="container-transparent">
-          <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin" style="padding-top: 3%;">
+          <div class="row row-50 justify-content-center justify-content-lg-between container-margin" style="padding-top: 3%;">
             <div class="col-md-12 col-lg-12 col-xs-12">
               <h2 class="hidden-to-animate">SKONTAKTUJ SIĘ Z NAMI</h2>
               <div class="under-text" style="  font-size: 1.0rem;">Będzie nam miło porozmawiać z Państwem</div>
             </div>
           </div>
-          <div class="row container-mrgin hidden-to-animate-top">
+          <div class="row container-margin hidden-to-animate-top">
             <div class="col col-left">
               <form class="form" id="contactForm" method="post" novalidate action="send-script.php">
                 <div class="form-row">
@@ -388,7 +389,7 @@
 
       <footer id="section3">
         <div class="container">
-          <div class="row container-mrgin">
+          <div class="row container-margin">
             <div class="col">
               <h4> DANE FIRMOWE </h4>
               <p>
